--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
         <!-- TODO Template jsp ↓-->
 
 
-<!--                <dependency>-->
-<!--                    <groupId>org.apache.tomcat.embed</groupId>-->
-<!--                    <artifactId>tomcat-embed-jasper</artifactId>-->
-<!--                </dependency>-->
+                <dependency>
+                    <groupId>org.apache.tomcat.embed</groupId>
+                    <artifactId>tomcat-embed-jasper</artifactId>
+                </dependency>
 
     </dependencies>
 
