--- a/pom.xml
+++ b/pom.xml
@@ -42,18 +42,18 @@
 
         <!-- TODO Template thymeleaf ↓ -->
 
-<!--                <dependency>-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
-<!--                </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <!-- TODO Template jsp ↓-->
 
 
-<!--                <dependency>-->
-<!--                    <groupId>org.apache.tomcat.embed</groupId>-->
-<!--                    <artifactId>tomcat-embed-jasper</artifactId>-->
-<!--                </dependency>-->
+        <!--                <dependency>-->
+        <!--                    <groupId>org.apache.tomcat.embed</groupId>-->
+        <!--                    <artifactId>tomcat-embed-jasper</artifactId>-->
+        <!--                </dependency>-->
 
     </dependencies>
 
